# FF-history

./: .gitignore  PROJECT_PLAN.md  README.md  config.json  dashboard.html  debug_history.py  genertor.py  main.py  pyproject.toml  simple_dashboard.py  streamlit_dashboard.py  test_profile.py
.claude/: settings.local.json
dashboard/: app.py
dashboard/components/: charts.py
dashboard/utils/: data_loader.py
src/: config.py  database.py  firefox_parser.py  journal_generator.py  markdown_exporter.py  scheduler.py
templates/: daily_template.md
